ISAICP-6596: Ensure the curved graphical element doesn't overlap with the text.

--- a/web/themes/ventuno/src/scss/components/_homepage.scss
+++ b/web/themes/ventuno/src/scss/components/_homepage.scss
@@ -47,11 +47,12 @@
   }
 }
 
-// Region Featured  
+// Region Featured
 .region-featured {
   background-color: $gray-300;
   position: relative;
   overflow: hidden;
+  z-index: 0;
   &:before {
     content: "";
     position: absolute;
@@ -61,5 +62,6 @@
     border-radius: 50%;
     top: -200%;
     transform: translate(-50%, 0);
+    z-index: -1;
   }
 }
